[workspace]
members = ["compo", "development"]
resolver = "2"

[workspace.package]
edition = "2021"
authors = ["megumsih <megumish@quantum-box.com>"]
categories = ["syn", "macros", "compo"]
description = "Let's make Macro by combining Component!"
documentation = "./README.md"
exclude = []
homepage = "https://github.com/megumish/compo"
include = []
keywords = ["syn", "macros", "compo"]
license = "MIT"
publish = false
readme = "./README.md"
repository = "https://github.com/megumish/compo.git"
rust-version = "1.72"
version = "0.1.0"

[workspace.dependencies]
#####################
# our projects
#####################
# main library
compo = { path = "./compo" }
# development example
development = { path = "./development" }

#####################
# external dependencies
#####################
# macro's utility
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
# test utility
pretty_assertions = "1.4"
